Updated to check running

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -18,10 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "af26b77b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: `@infiltrate` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.\nin expression starting at c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:4\nin expression starting at c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:2",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: `@infiltrate` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "in expression starting at c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:4\n",
+      "in expression starting at c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:2\n"
+     ]
+    }
+   ],
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
@@ -37,10 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb745fe6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `F_eq` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `F_eq` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl:7"
+     ]
+    }
+   ],
    "source": [
     "a=0.0 #parameter a - starts at 0 as this is the parameter we're varying over\n",
     "b=1.5 #parameter b - fixed \n",
@@ -75,10 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a90ae648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `ylist2` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `ylist2` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W5sZmlsZQ==.jl:2"
+     ]
+    }
+   ],
    "source": [
     "#Check that the outputs are equilibria \n",
     "u0ex1=ylist2[5][1:2] #equilibrium point values for x value\n",
@@ -89,10 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "89f9557e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `ylist1` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `ylist1` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W6sZmlsZQ==.jl:2"
+     ]
+    }
+   ],
    "source": [
     "#Now we look at stability of the steady-state branches\n",
     "xmat1=hcat([u[1] for u in ylist1],[u[2] for u in ylist1])\n",
@@ -138,14 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "85cc51f2",
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `stab` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `stab` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X11sZmlsZQ==.jl:1"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "stab_indx=findfirst(isequal(1.0),stab)#finds where stability changes first time\n",
     "unstab2_indx=findfirst(isequal(0.0),stab[101:end]) # finds where stability changes again \n",
@@ -155,14 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2d0e31f",
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `xlist` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `xlist` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X12sZmlsZQ==.jl:2"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "include(\"create_hopffunc.jl\")\n",
     "yh01,fhopf=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd)\n",
@@ -179,14 +253,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b7a8a5dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `a_hopf` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `a_hopf` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X13sZmlsZQ==.jl:1"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd)\n",
     "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000)\n",
@@ -212,8 +296,16 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.11.6",
+   "language": "julia",
+   "name": "julia-1.11"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
