Added necessary functions

--- a/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_equation_example.ipynb
@@ -12,9 +12,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fab8d0a2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "julia"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "using CairoMakie\n",
+    "using LinearAlgebra\n",
+    "include(\"mackeyglassfunc.jl\") #system of Mackey-Glass equation\n",
+    "include(\"mackeytau.jl\") #Delay forumla for Mackey-Glass equation\n",
+    "include(\"f_deriv.jl\") #used to find state and/or parameter derivatives\n",
+    "include(\"jacobian_new.jl\") #Jacobian function\n",
+    "include(\"newton_new.jl\") #Newton function\n",
+    "include(\"F_eq.jl\") #Initialisates a function to find equilibria \n",
+    "include(\"track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)"
+   ]
   }
  ],
  "metadata": {
