Trialling equilibria branching

--- a/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_equation_example.ipynb
@@ -64,7 +64,8 @@
     "\n",
     "y01,feq=F_eq(mackeyglassfunc,x0, [gamma,beta,n,tau],nd, par_indx=4)#par_indx=2)\n",
     "\n",
-    "ylist1,ytan1=track_curve_new(feq,y01,[0.0,1],nmax=1000)\n"
+    "ylist1,ytan1=track_curve_new(feq,y01,[0.0,1],nmax=1000) #i think it should output 1's for x value\n",
+    "\n"
    ]
   }
  ],
