--- a/Neuron_example.ipynb
+++ b/Neuron_example.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
@@ -64,8 +64,9 @@
     "\n",
     "nd=3 #there are 3 delays\n",
     "\n",
-    "y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
-    "#may need to add delay function f_tau to F_eq"
+    "#y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
+    "#may need to add delay function f_tau to F_eq\n",
+    "y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4, stepsize=)#varying paramter a21 so parameter index is 4\n"
    ]
   },
   {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -171,7 +172,9 @@
     "eigvals1=[fill(0.0+0.0*im,n*(1+nd*m)) for _ in 1:neq]\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m)\n",
+    "    #stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m)\n",
+    "    stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,xlist1[i],[plist[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m)\n",
+    "\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0)\n",
