Tidied up code and found singular error for hopf - MG system not registering tau

--- a/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_equation_example.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
     "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[gamma,beta,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd)\n",
     "#yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[gamma,beta,n,tau],xlist1[hopf_indx],[0.55],[4],nd)\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01)\n",
+    "yh1,conv1,=newton_new(fhopf,yh01) #SINGULAR ERROR - i think it's because my system doesn't register tau (end coloumn of df(x0) are all 0's)\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
