Rerun having solved singular error (in create_hopffunc)

--- a/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_equation_example.ipynb
@@ -200,50 +200,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The initial guess for Hopf info: [1.0, 0.20000222265245526, -0.9797954434136127, 3.5945823164490216, 0.49000000000000027]\n"
-     ]
-    },
-    {
-     "ename": "SingularException",
-     "evalue": "SingularException(5)",
-     "output_type": "error",
-     "traceback": [
-      "SingularException(5)\n",
-      "\n",
-      "Stacktrace:\n",
-      "  [1] checknonsingular\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\factorization.jl:69 [inlined]\n",
-      "  [2] _check_lu_success\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:84 [inlined]\n",
-      "  [3] #lu!#182\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:92 [inlined]\n",
-      "  [4] lu!\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:90 [inlined]\n",
-      "  [5] lu!\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:89 [inlined]\n",
-      "  [6] _lu\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:347 [inlined]\n",
-      "  [7] lu(::Matrix{Float64}; kwargs::@Kwargs{})\n",
-      "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341\n",
-      "  [8] lu\n",
-      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
-      "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
-      "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] newton_new(f::var\"#fhopf#1232\"{typeof(mackeyglassfunc), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#1231\"{typeof(mackeyglassfunc), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, x0::Vector{Float64}; h::Float64, df::var\"#1188#1190\"{var\"#fhopf#1232\"{typeof(mackeyglassfunc), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#1231\"{typeof(mackeyglassfunc), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, tol::Float64, maxit::Int64)\n",
-      "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:4\n",
-      " [11] newton_new(f::Function, x0::Vector{Float64})\n",
-      "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:2\n",
-      " [12] top-level scope\n",
-      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl:5"
+      "The initial guess for Hopf info: [1.0, 1.0, 0.0, 3.7503875281389147, 0.49000000000000027]\n",
+      "The true information for the Hopf bifurcation: [1.0, 1.0, 0.0, 3.87298334183115, 0.47081962953876083]\n",
+      "converged?: true\n",
+      "The a value for hopf bifurcation: 0.47081962953876083\n",
+      "The ω value for hopf bifurcation: 3.87298334183115\n"
      ]
     }
    ],
    "source": [
     "include(\"create_hopffunc.jl\")\n",
-    "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[gamma,beta,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd)\n",
+    "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd)\n",
     "#yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[gamma,beta,n,tau],xlist1[hopf_indx],[0.55],[4],nd)\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01) #SINGULAR ERROR - i think it's because my system doesn't register tau (end coloumn of df(x0) are all 0's)\n",
+    "yh1,conv1,=newton_new(fhopf,yh01) \n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -255,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 298,
    "id": "6f74c23e",
    "metadata": {},
    "outputs": [],
