Added code to help me understand other example workings

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -274,6 +274,35 @@
     "ylims!(ax4,[0,6])\n",
     "fig4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0188751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9-element Vector{Float64}:\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.19415178996652496\n",
+       "  0.8270601073858643\n",
+       " -0.5275193467766628\n",
+       "  0.0\n",
+       "  1.3807894029278767\n",
+       "  3.5908064152889505\n",
+       "  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#yheq01"
+   ]
   }
  ],
  "metadata": {
