Adjusted some of the text

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -13,7 +13,7 @@
    "id": "d24de573",
    "metadata": {},
    "source": [
-    "The parameters: tau=sqrt(2)/4 and b=1.5 (fixed). Parameter 'a' is varied."
+    "The parameters: `τ`=sqrt(2)/4 and b=1.5 (fixed). Parameter 'a' is varied."
    ]
   },
   {
