--- a/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_equation_example.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
@@ -349,8 +349,8 @@
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd)\n",
     "\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau=0.47\n",
-    "yheqlist2,heqtan2=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau=0.47\n",
+    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47\n",
+    "yheqlist2,heqtan2=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
     "\n",
     "#Plot of continuation/tracking in (a,b) plane\n",
     "fig4=Figure()\n",
