Added further detail for user understanding

--- a/Neuron_example.ipynb
+++ b/Neuron_example.ipynb
@@ -9,15 +9,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79969f81",
+   "metadata": {},
+   "source": [
+    "In this example the delay differential equation (DDE) system is used to model the interaction between two neurons, x₁ and x₂. The DDE system is given by:\n",
+    "```math\n",
+    "\\begin{align}\n",
+    "  \\dot{x}_1&= -\\kappa x_1(t) + \\beta \\tanh(x_1(t-\\tau_s)) + a_{12} \\tanh(x_2(t-\\tau_2))\\\\\n",
+    "  \\dot{x}_2&=-\\kappa x_2(t) + \\beta \\tanh(x_2(t-\\tau_s)) + a_{21} \\tanh(x_2(t-\\tau_1))\n",
+    "\\end{align}\n",
+    "```\n",
+    "where τ₁ and τ₂ are the delays between neurons 1 and 2, respectively, getting a stimulus and reacting to the stimulus and where τ_s is the delay between neuron 1 reacting and neuron 2 getting stimulated by neuron 1's reaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "936f26f8",
+   "metadata": {},
+   "source": [
+    "The following packages and functions are needed:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "stab_func (generic function with 1 method)"
+       "create_hopffunc (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -34,19 +57,20 @@
     "include(\"newton_new.jl\") #Newton function\n",
     "include(\"F_eq.jl\") #Initialisates a function to find equilibria \n",
     "include(\"track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"stab_func.jl\")"
+    "include(\"stab_func.jl\")#finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0, 0.0, 2.34], var\"#f_equilibrium#164\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
+       "([0.0, 0.0, 2.34], var\"#f_equilibrium#181\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
       ]
      },
      "metadata": {},
@@ -54,24 +78,23 @@
     }
    ],
    "source": [
+    "#Values of parameters (same as those given in the neuron demo for DDE-Biftool)\n",
     "k=0.5\n",
     "beta=-1\n",
     "a12=1\n",
-    "a21=2.34 #0 \n",
+    "a21=2.34 \n",
     "tau1=0.2\n",
     "tau2=0.2\n",
     "taus=1.5\n",
     "\n",
     "nd=3 #there are 3 delays\n",
-    "\n",
-    "#y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
-    "#may need to add delay function f_tau to F_eq\n",
-    "y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n"
+    "y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
+    "#The above outputs an initial equilibirium and a function to find the equilibria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -94,8 +117,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8dbac70a",
+   "metadata": {},
+   "source": [
+    "# Equilibria branch and stability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7f7c1a",
+   "metadata": {},
+   "source": [
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria - for more details look at ```stab_func```. The function ``` stab_func ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -110,7 +149,7 @@
     }
    ],
    "source": [
-    "#Test stability of initial point (I think it should be unstable)\n",
+    "#Test stability of initial point (it should be unstable)\n",
     "x0=y01[1:2]\n",
     "p0=y01[3]\n",
     "stabi,eigvalsi,eigvecs1=stab_func(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1)\n",
@@ -123,18 +162,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "8b768f55",
+   "cell_type": "markdown",
+   "id": "4ac5fbd7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#eigvalsi"
+    "We now find the equilibria branch whilst varying the paramete a₂₁ and then find stability of these equilibirium points:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -150,69 +187,40 @@
     }
    ],
    "source": [
-    "y02,feq2=F_eq(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4)\n",
-    "alist1,ytan1=track_curve_new(feq2,y02,[0.0,0,1],nmax=550)\n",
-    "#alist2,ytan2=track_curve_new(feq2,y02,[1.0,0,0],nmax=550)\n",
-    "#alist3,ytan3=track_curve_new(feq2,y02,[-1.0,0,0],nmax=550)\n",
+    "y02,feq2=F_eq(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and finding starting point for equilibria branching\n",
+    "alist1,ytan1=track_curve_new(feq2,y02,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
     "\n",
-    "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1])\n",
-    "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)]\n",
-    "#xmat2=hcat([u[1] for u in alist2],[u[2] for u in alist2])\n",
-    "#xlist2=[xmat2[i,:] for i in 1:size(xmat2,1)]\n",
+    "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]) #finds the values of x1 and x2 for the equilibria\n",
+    "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)] #creates a vector of vectors of all the equilibria points\n",
     "\n",
-    "plist1=[u[3] for u in alist1]\n",
-    "#plist2=[u[3] for u in alist2]\n",
+    "\n",
+    "plist1=[u[3] for u in alist1] #A vector of the values of a21 for the equilibria points\n",
     "\n",
     "m=100 #number of discretised steps\n",
     "n=2 #number of states (x1,x2)\n",
     "neq=length(plist1) #number of equilibrium points we're finding the stability of\n",
     "stab=fill(NaN,neq)\n",
-    "#eigvals1=fill(ComplexF64[],neq,n*(1+m*nd))\n",
     "eigvals1=[fill(0.0+0.0*im,n*(1+nd*m)) for _ in 1:neq]\n",
     "\n",
     "for i in 1:neq\n",
-    "    #stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m)\n",
-    "    stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m)\n",
-    "\n",
+    "    stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
     "end\n",
     "\n",
-    "stable=(stab.==1.0)\n",
-    "unstable=(stab.==0.0)\n",
+    "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
+    "unstable=(stab.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
-    "fig2=Figure()\n",
-    "ax2=Axis(fig2[1,1],xlabel=\"a21\",ylabel=\"x\")\n",
-    "scatter!(ax2,plist1[stable],[u[1] for u in xlist1[stable]],label=\"stable\",color=\"green\")\n",
-    "scatter!(ax2,plist1[unstable],[u[1] for u in xlist1[unstable]],label=\"unstable\",color=\"red\")\n",
-    "#scatter!(ax2,plist2,[u[1] for u in xlist2])\n",
-    "Legend(fig2[1,2], ax2, merge=true)\n",
-    "fig2"
+    "#Below plots the equilibria and shows their stability\n",
+    "fig1=Figure()\n",
+    "ax1=Axis(fig1[1,1],xlabel=\"a21\",ylabel=\"x\")\n",
+    "scatter!(ax1,plist1[stable],[u[1] for u in xlist1[stable]],label=\"stable\",color=\"green\")\n",
+    "scatter!(ax1,plist1[unstable],[u[1] for u in xlist1[unstable]],label=\"unstable\",color=\"red\")\n",
+    "Legend(fig1[1,2], ax1, merge=true)\n",
+    "fig1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "82ebd26a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8400000000000005"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "avals=[u[3] for u in alist1] #list of a21  values\n",
-    "unstab_indx=findfirst(isequal(0.0),stab)\n",
-    "a21unstab=avals[unstab_indx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "ea4aa717",
    "metadata": {},
    "outputs": [
@@ -228,34 +236,68 @@
     }
    ],
    "source": [
+    "avals=[u[3] for u in alist1] #list of a21  values\n",
     "realeigs=real(eigvals1) #gets real parts of all eigenvalues for each tracked point\n",
-    "n_eig=length(realeigs)\n",
-    "#argmax.(realeigs) #finds index of largest real part of eigenvalues for each parameter a21 value\n",
+    "n_eig=length(avals) #number of equilibrium points\n",
     "\n",
     "maxrealeigs=fill(NaN,n_eig)\n",
     "\n",
     "for i in 1:n_eig\n",
     "    realindx=argmax(realeigs[i]) #finds index of largest real part of eigenvalues for a21 value\n",
-    "    maxrealeigs[i]=realeigs[i][realindx] #the largest real part of eigenvalues for the a21 value\n",
+    "    maxrealeigs[i]=realeigs[i][realindx] #the largest real part of eigenvalues for the a21 value (needed as largest real part dictates if a point is stable (<0) or unstable (>0))\n",
     "end\n",
     "\n",
-    "avalsrep=repeat(avals,inner=n*(1+m*nd))\n",
-    "realeigsflat=vcat(realeigs...)#flattens vector of vectors \n",
-    "\n",
-    "\n",
-    "fig3=Figure()\n",
-    "ax3=Axis(fig3[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
-    "#lines!(ax3,avalsrep,realeigsflat)\n",
-    "lines!(ax3,avals,maxrealeigs)\n",
-    "xlims!(ax3,[0.0,5])\n",
-    "ylims!(ax3,[-1,1.5])\n",
-    "hlines!(ax3,0,linestyle=:dash)\n",
-    "fig3"
+    "#Below plots the largest real eigenvalue part for varying parameter a21\n",
+    "fig2=Figure()\n",
+    "ax2=Axis(fig2[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
+    "lines!(ax2,avals,maxrealeigs)\n",
+    "xlims!(ax2,[0.0,5])\n",
+    "ylims!(ax2,[-1,1.5])\n",
+    "hlines!(ax2,0,linestyle=:dash) #horiztonal line at R(λ)=0 to indicate imagainary axis\n",
+    "fig2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "770c9afe",
+   "metadata": {},
+   "source": [
+    "# Hopf bifurcation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d08b9cc",
+   "metadata": {},
+   "source": [
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ω. We start finding the Hopf parameters by finding the initial guess of the a21 value for the Hopf bifurcation: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
+   "id": "e08cf059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8400000000000005"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#We aim to find where the eigenvalues cross the imaginary axis (and become purely imaginary )\n",
+    "unstab_indx=findfirst(isequal(0.0),stab) #find index of stability change\n",
+    "a21unstab=avals[unstab_indx] #initial guess of a21 value for Hopf bifurcation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -271,21 +313,29 @@
     }
    ],
    "source": [
-    "fig4=Figure()\n",
-    "ax4=Axis(fig4[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
-    "#lines!(ax3,avalsrep,realeigsflat)\n",
-    "lines!(ax4,avals,maxrealeigs)\n",
-    "xlims!(ax4,[0.0,5])\n",
-    "ylims!(ax4,[-1,1.5])\n",
-    "hlines!(ax4,0,linestyle=:dash)\n",
-    "scatter!(ax4,a21unstab,maxrealeigs[unstab_indx],color=:black,marker=:diamond, label=\"Expected Hopf bifurcation\")\n",
-    "Legend(fig4[1,2], ax4, merge=true)\n",
-    "fig4"
+    "#Below plots Figure 2 but with the suspected Hopf bifurcation values plotted as well\n",
+    "fig3=Figure()\n",
+    "ax3=Axis(fig3[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
+    "lines!(ax3,avals,maxrealeigs)\n",
+    "xlims!(ax3,[0.0,5])\n",
+    "ylims!(ax3,[-1,1.5])\n",
+    "hlines!(ax3,0,linestyle=:dash) #horiztonal line at R(λ)=0 to indicate imagainary axis\n",
+    "scatter!(ax3,a21unstab,maxrealeigs[unstab_indx],color=:black,marker=:diamond, label=\"Expected Hopf bifurcation\")\n",
+    "Legend(fig3[1,2], ax3, merge=true)\n",
+    "fig3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a000846f",
+   "metadata": {},
+   "source": [
+    "Now we have an initial guess for the Hopf parameters we find the true parameter values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -293,6 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The initial guess for Hopf info: [0.0, 0.0, -0.7372097807744674, -0.675663924692196, 0.0, -3.0561185176617133e-14, 0.7668092696642693, 0.8400000000000005]\n",
       "The initial guess for Hopf info: [0.0, 0.0, -0.7372097807744674, -0.675663924692196, 0.0, -3.0561185176617133e-14, 0.7668092696642693, 0.8400000000000005]\n",
       "The true information for the Hopf bifurcation: [0.0, 0.0, -0.7438855391134426, -0.6683070437290805, -1.5196126276112554e-14, -1.3648090508619166e-14, 0.7819651620459528, 0.8071232251830747]\n",
       "converged?: true\n",
@@ -302,10 +353,10 @@
     }
    ],
    "source": [
-    "include(\"create_hopffunc.jl\")\n",
-    "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd)\n",
+    "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01)\n",
+    "println(\"The initial guess for Hopf info: $yh01\")\n",
+    "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -317,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -333,16 +384,16 @@
     }
    ],
    "source": [
-    "fig5=Figure()\n",
-    "ax5=Axis(fig5[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
-    "#lines!(ax3,avalsrep,realeigsflat)\n",
-    "lines!(ax5,avals,maxrealeigs)\n",
-    "xlims!(ax5,[0.0,5])\n",
-    "ylims!(ax5,[-1,1.5])\n",
-    "hlines!(ax5,0,linestyle=:dash)\n",
-    "scatter!(ax5,a_hopf,0,color=:black,marker=:diamond, label=\"Hopf\")\n",
-    "Legend(fig5[1,2], ax5, merge=true)\n",
-    "fig5"
+    "#Below plots Figure 2 but with the true Hopf bifurcation values plotted as well\n",
+    "fig4=Figure()\n",
+    "ax4=Axis(fig4[1,1],xlabel=\"a21\",ylabel=\"R(λ)\")\n",
+    "lines!(ax4,avals,maxrealeigs)\n",
+    "xlims!(ax4,[0.0,5])\n",
+    "ylims!(ax4,[-1,1.5])\n",
+    "hlines!(ax4,0,linestyle=:dash) #horiztonal line at R(λ)=0 to indicate imagainary axis\n",
+    "scatter!(ax4,a_hopf,0,color=:black,marker=:diamond, label=\"Hopf\") #true value of Hopf plotted at a=a_hopf and R(λ)=0\n",
+    "Legend(fig4[1,2], ax4, merge=true)\n",
+    "fig4"
    ]
   },
   {
@@ -350,12 +401,20 @@
    "id": "24eaa715",
    "metadata": {},
    "source": [
-    "# Continuation in (a21,tau_s)-plane"
+    "# Continuation in (a₂₁,τ_s)-plane"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c8c6879",
+   "metadata": {},
+   "source": [
+    "We continue the Hopf points in the a₂₁ and τ_s parameter plane:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
@@ -371,20 +430,18 @@
     }
    ],
    "source": [
-    "#yheq01,fhopfeq1=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,0.01],[4,7],nd)\n",
-    "yheq01,fhopfeq1=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd)\n",
-    "\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250)\n",
+    "yheq01,fhopfeq1=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises hopf function and initial guess for a21≈0.8 and tau_s=1.5\n",
+    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and tau_s over (a21, tau_s) plane\n",
     "\n",
     "#Plot of continuation/tracking in (a21,tau_s) plane\n",
-    "fig6=Figure()\n",
-    "ax6=Axis(fig6[1,1],xlabel=\"a21\",ylabel=\"tau_s\")\n",
-    "scatter!(ax6,[u[end-1] for u in yheqlist1],[u[end] for u in yheqlist1],color=\"green\",markersize=:7)\n",
-    "ylims!(ax6,[1,11])\n",
-    "xlims!(ax6,[-0.5,2.5])\n",
-    "ax6.xticks=-0.5:0.5:2.5\n",
-    "ax6.yticks=1:1:11\n",
-    "fig6"
+    "fig5=Figure()\n",
+    "ax5=Axis(fig5[1,1],xlabel=\"a21\",ylabel=\"tau_s\")\n",
+    "scatter!(ax5,[u[end-1] for u in yheqlist1],[u[end] for u in yheqlist1],color=\"green\",markersize=:7)\n",
+    "ylims!(ax5,[1,11])\n",
+    "xlims!(ax5,[-0.5,2.5])\n",
+    "ax5.xticks=-0.5:0.5:2.5 #creates x-axis increments that match those given in DDE-Biftool (makes comparsion between the two easier)\n",
+    "ax5.yticks=1:1:11 #creates y-axs increments that match those given in DDE-Biftool\n",
+    "fig5"
    ]
   }
  ],
